--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
 			
 			<div class="voxiom__window base-window active">
 				
-				<div class="voxiom__window-title">Voxiom Comunity Updater</div>
+				<div class="voxiom__window-title">Voxiom Community Updater</div>
 				<div class="voxiom__window-content">
 					<div class="voxiom__switches">
 						
