make more refactoring, create utils js, whre paste all utils fucntions for inject and wich one is using in popup, remove no needed permisions

--- a/popup.html
+++ b/popup.html
@@ -112,6 +112,7 @@
 		</div>
 
 	</div>
+	<script src="/assets/js/utils.js"></script>
 	<script src="/assets/js/pop_up.js"></script>
 </body>
 </html>
