--- a/popup.html
+++ b/popup.html
@@ -48,6 +48,13 @@
 								<input type="checkbox">
 								<span class="toggle-slider"></span>
 							</label>
+						</div>	
+						<div class="voxiom__switch toggle-element with-delay" data-toggle_element="change-crosshair" data-toggle_clear=".voxiom__window">
+							<div class="voxiom__switch-title">Change Default Crosshair</div>
+							<label class="switch">
+								<input type="checkbox">
+								<span class="toggle-slider"></span>
+							</label>
 						</div>			
 
 					</div>
@@ -115,6 +122,7 @@
 				</div>
 
 			</div>
+
 			<div class="voxiom__window font-size-window">
 				<div class="voxiom__window-title">Voxiom Font Size Changer</div>
 				<div class="voxiom__window-content">
@@ -169,11 +177,29 @@
 
 			</div>
 
+			<div class="voxiom__window change-crosshair">
+				<div class="voxiom__window-title">Crosshair Changer</div>
+				<div class="voxiom__window-content">
+					<label for="crosshairFile" class="font-url file-input-label">
+						<span>Click to choose file</span>
+						<input type="file" id="crosshairFile" class="def-input" value="">
+					</label>
+					<div class="voxiom__controls">
+						<button class="voxiom__control-btn reset-btn" id="crosshairResetBtn"> <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 513.806 513.806" style="enable-background:new 0 0 513.806 513.806;" xml:space="preserve" width="512" height="512"> <g> <path d="M66.074,228.731C81.577,123.379,179.549,50.542,284.901,66.045c35.944,5.289,69.662,20.626,97.27,44.244l-24.853,24.853   c-8.33,8.332-8.328,21.84,0.005,30.17c3.999,3.998,9.423,6.245,15.078,6.246h97.835c11.782,0,21.333-9.551,21.333-21.333V52.39   c-0.003-11.782-9.556-21.331-21.338-21.329c-5.655,0.001-11.079,2.248-15.078,6.246L427.418,65.04   C321.658-29.235,159.497-19.925,65.222,85.835c-33.399,37.467-55.073,83.909-62.337,133.573   c-2.864,17.607,9.087,34.202,26.693,37.066c1.586,0.258,3.188,0.397,4.795,0.417C50.481,256.717,64.002,244.706,66.074,228.731z"/> <path d="M479.429,256.891c-16.108,0.174-29.629,12.185-31.701,28.16C432.225,390.403,334.253,463.24,228.901,447.738   c-35.944-5.289-69.662-20.626-97.27-44.244l24.853-24.853c8.33-8.332,8.328-21.84-0.005-30.17   c-3.999-3.998-9.423-6.245-15.078-6.246H43.568c-11.782,0-21.333,9.551-21.333,21.333v97.835   c0.003,11.782,9.556,21.331,21.338,21.329c5.655-0.001,11.079-2.248,15.078-6.246l27.733-27.733   c105.735,94.285,267.884,85.004,362.17-20.732c33.417-37.475,55.101-83.933,62.363-133.615   c2.876-17.605-9.064-34.208-26.668-37.084C482.655,257.051,481.044,256.91,479.429,256.891z"/> </g></svg> </button>
+
+						<button class="voxiom__control-btn back-btn toggle-element disable-switch" data-toggle_element="base-window" data-toggle_clear=".voxiom__window"> <svg xmlns="http://www.w3.org/2000/svg" id="Bold" viewBox="0 0 24 24" width="512" height="512"><path d="M10.482,19.5a1.5,1.5,0,0,1-1.06-.439L4.836,14.475a3.505,3.505,0,0,1,0-4.95L9.422,4.939a1.5,1.5,0,0,1,2.121,2.122L6.957,11.646a.5.5,0,0,0,0,.708l4.586,4.585A1.5,1.5,0,0,1,10.482,19.5Z"/><path d="M17.482,19.5a1.5,1.5,0,0,1-1.06-.439l-6-6a1.5,1.5,0,0,1,0-2.122l6-6a1.5,1.5,0,1,1,2.121,2.122L13.6,12l4.939,4.939A1.5,1.5,0,0,1,17.482,19.5Z"/></svg> </button>
+
+					</div>
+				</div>
+
+			</div>
+
 		</div>
 
 	</div>
 	<script src="/assets/js/utils.js"></script>
-	<script src="assets/js/features/change_bg/popup__bg-change.js"></script>
+	<script src="/assets/js/features/change_bg/popup__bg-change.js"></script>
+	<script src="/assets/js/features/crosshair/popup__ch-change.js"></script>
 	<script src="/assets/js/pop_up.js"></script>
 </body>
 </html>
